<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_temp" >

    <ScrollView
        android:id="@+id/PersonInfoScrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/topview"
        android:visibility="visible" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/userpicture"
                    android:layout_width="95dp"
                    android:layout_height="95dp"
                    android:background="#77ffffff" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/dri_fname"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="-2dp"
                        android:layout_weight="1"
                        android:background="@drawable/edit_text"
                        android:drawableLeft="@drawable/ic_username"
                        android:hint="@string/dri_fname"
                        android:imeOptions="actionNext"
                        android:lines="1"
                        android:paddingBottom="10dp"
                        android:maxLength="15"
                        android:paddingLeft="15dp"
                        android:paddingRight="10dp"
                        android:paddingTop="10dp"
                        android:textColor="@color/white"
                        android:textColorHint="#cccccc" />

                    <EditText
                        android:id="@+id/dri_lname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="-5dp"
                        android:layout_marginTop="-2dp"
                        android:maxLength="15"
                        android:layout_weight="1"
                        android:background="@drawable/edit_text"
                        android:drawableLeft="@drawable/ic_username"
                        android:hint="@string/dri_lname"
                        android:imeOptions="actionNext"
                        android:lines="1"
                        android:paddingBottom="10dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="10dp"
                        android:paddingTop="10dp"
                        android:textColor="@color/white"
                        android:textColorHint="#cccccc" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/dri_add1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text"
                    android:drawableLeft="@drawable/ic_address"
                    android:hint="@string/add1"
                    android:inputType="text"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="#cccccc" />

                <EditText
                    android:id="@+id/dri_add2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-2dp"
                    android:background="@drawable/edit_text"
                    android:drawableLeft="@drawable/ic_address"
                    android:hint="@string/add2"
                    android:inputType="text"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="#cccccc" />

                <EditText
                    android:id="@+id/dri_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-2dp"
                    android:background="@drawable/edit_text"
                    android:drawableLeft="@drawable/ic_email"
                    android:hint="@string/dri_email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="#cccccc" />

                <EditText
                    android:id="@+id/dri_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-2dp"
                    android:background="@drawable/edit_text"
                    android:drawableLeft="@drawable/ic_password"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:lines="1"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="#cccccc" />

                <EditText
                    android:id="@+id/dri_confm_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-2dp"
                    android:background="@drawable/edit_text"
                    android:drawableLeft="@drawable/ic_password"
                    android:hint="@string/repassword"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:lines="1"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="#cccccc" />

                <EditText
                    android:id="@+id/dri_city"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-2dp"
                    android:background="@drawable/edit_text"
                    android:drawableLeft="@drawable/ic_email"
                    android:hint="@string/city"
                    android:maxLength="15"
                    android:inputType="text"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="#cccccc" />

                <EditText
                    android:id="@+id/dri_state"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-2dp"
                    android:background="@drawable/edit_text"
                    android:drawableLeft="@drawable/ic_email"
                    android:hint="@string/state"
                    android:inputType="text"
                    android:maxLength="15"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="#cccccc" />

                <EditText
                    android:id="@+id/dri_country"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-2dp"
                    android:background="@drawable/edit_text"
                    android:maxLength="15"
                    android:drawableLeft="@drawable/ic_email"
                    android:hint="@string/country"
                    android:inputType="text"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="#cccccc" />

                <EditText
                    android:id="@+id/dri_zipcode"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-2dp"
                    android:background="@drawable/edit_text"
                    android:drawableLeft="@drawable/ic_email"
                    android:hint="@string/zipcode"
                    android:inputType="number"
                    android:maxLength="6"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="#cccccc" />

                <EditText
                    android:id="@+id/dri_age"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-2dp"
                    android:background="@drawable/edit_text"
                    android:drawableLeft="@drawable/ic_email"
                    android:hint="@string/age"
                    android:inputType="number"
                    android:maxLength="2"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="#cccccc" />

                <EditText
                    android:id="@+id/dri_sex"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-2dp"
                    android:background="@drawable/edit_text"
                    android:drawableLeft="@drawable/ic_email"
                    android:focusable="false"
                    android:hint="@string/sex"
                    android:inputType="text"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="#cccccc" />

                <EditText
                    android:id="@+id/dri_dob"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-2dp"
                    android:background="@drawable/edit_text"
                    android:drawableLeft="@drawable/ic_email"
                    android:hint="@string/dob"
                    android:inputType="date"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="#cccccc" />

                <EditText
                    android:id="@+id/dri_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-2dp"
                    android:background="@drawable/edit_text"
                    android:drawableLeft="@drawable/ic_mobile"
                    android:hint="@string/dri_mobile"
                    android:inputType="number"
                    android:maxLength="10"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="#cccccc" />

                <EditText
                    android:id="@+id/dri_alternateMobile"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-2dp"
                    android:background="@drawable/edit_text"
                    android:drawableLeft="@drawable/ic_country"
                    android:hint="@string/alternateMobile"
                    android:inputType="number"
                    android:maxLength="10"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="#cccccc" />

                <EditText
                    android:id="@+id/dri_mobcountry"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-2dp"
                    android:background="@drawable/edit_text"
                    android:drawableLeft="@drawable/ic_country"
                    android:hint="@string/mobcountry"
                    android:maxLength="5"
                    android:inputType="number"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="#cccccc" />

                <EditText
                    android:id="@+id/dri_lang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-2dp"
                    android:background="@drawable/edit_text"
                    android:drawableLeft="@drawable/ic_address"
                    android:hint="@string/dri_lang"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:maxLength="15"
                    android:textColor="@color/white"
                    android:textColorHint="#cccccc" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:orientation="vertical" >

                    <CheckBox
                        android:id="@+id/check_privracy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/privracy"
                        android:textAlignment="textStart"
                        android:textColor="#ffffff" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="30dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/termsncon" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>