<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#edeeed" >

    <RelativeLayout
        android:id="@+id/topview"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#77000000" >

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingBottom="8dp"
            android:paddingLeft="14dp"
            android:paddingRight="12dp"
            android:paddingTop="8dp"
            android:text="Back"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="8dp"
            android:text="Company Info"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/PersonInfoScrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/topview"
        android:visibility="visible" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/register_bg"
                android:orientation="vertical"
                android:padding="5dp" >

                <EditText
                    android:id="@+id/dri_comp_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/dri_comp_name" />

                <EditText
                    android:id="@+id/dri_comp_address"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/dri_comp_address" />

                <EditText
                    android:id="@+id/dri_comp_city"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/dri_comp_city"
                    />

                <EditText
                    android:id="@+id/dri_comp_state"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/dri_comp_state" />

                <EditText
                    android:id="@+id/dri_comp_zip"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/dri_comp_zip"
                    android:inputType="number"  />

                <EditText
                    android:id="@+id/dri_comp_phone"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/dri_comp_phone"
                    android:inputType="phone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical" >

                    <CheckBox
                        android:id="@+id/check_privracy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/privracy"
                        android:textAlignment="textStart"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="15dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/termsncon" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rectangle_counter"
        android:paddingBottom="2dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginBottom="10dp"
        android:paddingTop="2dp"
        android:text="Submit"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" >
    </Button>

</RelativeLayout>